--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "progress": "1.1.8",
     "prompt": "~0.2.14",
     "read": "1.0.5",
-    "request": "2.85.0",
+    "request": "https://github.com/howardroark/request",
     "split": "0.3.1",
     "surge-ignore": "0.2.0",
     "tarr": "1.0.3",
